tests/regression/errors/basic/syntax_error_12.csd
// Syntax error test 12 - missing semicolon
sus x drip = 12
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
